консультация по исправлениям

--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="page">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page-body">
     <header class="page-header">
-      <a class="page-header__logo" href=""><img src="https://via.placeholder.com/150x150">Cat energy
+      <a class="page-header__logo logo" href=""><img class="logo__img" src="https://via.placeholder.com/150x150">Cat energy
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -15,17 +15,17 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a>
+              <a class="site-list__link">
                 Главная
               </a>
             </li>
             <li class="site-list__item">
-              <a href="#">
+              <a class="site-list__link" href="#">
                 Каталог продукции
               </a>
             </li>
-            <li class="site-list__item">
-              <a href="#">
+            <li   class="site-list__item">
+              <a class="site-list__link" href="#">
                 Подбор программы
               </a>
             </li>
