консультация по исправлениям

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
                 Каталог продукции
               </a>
             </li>
-            <li   class="site-list__item">
+            <li cl4ass="site-list__item">
               <a class="site-list__link" href="#">
                 Подбор программы
               </a>
