--- a/source/index.html
+++ b/source/index.html
@@ -2,17 +2,24 @@
 <html lang="ru" class="page">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
   </head>
   <body class="page-body">
     <header class="page-header">
-      <a class="page-header__logo logo" href=""><img class="logo__img" src="https://via.placeholder.com/150x150">Cat energy
-      </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
+        <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="Cat energy"></a>
+          <!-- <picture>
+            <source srcset="https://via.placeholder.com/768x768 768w">
+            <source srcset="https://via.placeholder.com/480x480 480w">
+            <img src="https://via.placeholder.com/320x320" alt="logo">
+          </picture> -->
+        <div class="header__burger">
+          <span></span>
+        </div>
+        <div class="header__menu">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a class="site-list__link">
@@ -20,62 +27,78 @@
               </a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">
+              <a class="site-list__link" href="catalog.html">
                 Каталог продукции
               </a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">
+              <a class="site-list__link" href="form.html">
                 Подбор программы
               </a>
             </li>
           </ul>
-        </div>
+         </div>
       </nav>
     </header>
-    <main class="page-main">
+    <main>
       <h1 class="visually-hidden">Здорое питание для ваших котов</h1>
       <section class="diet">
         <div class="diet__wrapper">
           <header class="diet__header">
-            <h2 class="diet__title">Функциональное питание для котов</h2>
-            <p class="diet__slogan">Занялся собой? Займись котом!</p>
-            <a href="" class="button-diet">подобрать программу</a>
-            <img class="diet__img" src="" alt="Кошачий корм">
+            <div class="block__text">
+              <h2 class="diet__title">Функциональное питание для котов</h2>
+              <p class="diet__slogan">Занялся собой? Займись котом!</p>
+            </div>
+            <div class="container__img">
+              <img class="diet__img visually-hidden" src="" alt="Кошачий корм">
+            </div>
+            <a href="" class="button button-diet">подобрать программу</a>
           </header>
           <div class="slimming-diet">
-            <img class="diet__icon" src="" alt="Грациозная кошка">
-            <h2 class="diet__caption">похудение</h2>
+            <div class="diet__inner">
+              <img class="diet__icon icon__slim--indents" src="#" alt="Грациозная кошка" width="32" height="50">
+              <h2 class="diet__caption">Похудение</h2>
+            </div>
             <p class="diet__subtitle">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="diet__link" href="">каталог slim<svg class="button__icon"></svg></a>
+            <a class="diet__link" href="">каталог slim<svg class="button__icon" width="32"height="10"></svg></a>
           </div>
           <div class="diet-weight-gain">
-            <img class="diet__icon" src="" alt="Мощный кот">
-            <h2 class="diet__caption">Набор массы</h2>
+            <div class="diet__inner">
+              <img class="diet__icon icon__strong--indents" src="" alt="Мощный кот" width="67" height="50">
+              <h2 class="diet__caption">Набор массы</h2>
+            </div>
             <p class="diet__subtitle">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="diet__link" href="">каталог pro<svg class="button__icon"></svg></a>
+            <a class="diet__link" href="">каталог pro<svg class="button__icon" width="32"height="10"></svg></a>
           </div>
         </div>
       </section>
       <section class="description">
-          <h2 class="visually-hidden">Описание работы</h2>
+        <h2 class="visually-hidden">Описание работы</h2>
         <div class="description__wrapper">
           <h3 class="description__title">Как это работает</h3>
           <ul class="description__list">
             <li class="description__item">
-              <img class="description__image" src="" alt="Лист">
+              <div class="description__image--box">
+                <img class="description__image" src="" alt="Лист" width="30"  height="32">
+              </div>
               <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="description__item">
-              <img class="description__image" src="" alt="Порошок">
+              <div class="description__image--box">
+                <img class="description__image" src="" alt="Порошок" width="29" height="31">
+              </div>
               <p class="description__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="description__item">
-              <img class="description__image" src="" alt="Столовые приборы">
+              <div class="description__image--box">
+                <img class="description__image" src="" alt="Столовые приборы" width="25" height="30">
+              </div>
               <p class="description__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="description__item">
-              <img class="description__image" src="" alt="Часы">
+              <div class="description__image--box">
+                <img class="description__image" src="" alt="Часы" width="32" height="33">
+              </div>
               <p class="description__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
@@ -91,49 +114,57 @@
             <ul class="total__list">
               <li class="total__item">
                 <h3 class="total__title">5 кг</h3>
-                <p class="total__subtitle">снижение веса</p>
+                <p class="total__subtitle">снижение<br>веса</p>
               </li>
               <li class="total__item">
                 <h3 class="total__title">60 дней</h3>
-                <p class="total__subtitle">затрачено времени</p>
+                <p class="total__subtitle">затрачено<br>времени</p>
               </li>
             </ul>
-            <p>Затраты на питание: 15 000 руб.</p>
+            <p class="maney-total">Затраты на питание: 15 000 руб.</p>
           </div>
           <div class="visualization">
-            <img src="" alt="Кот до">
-            <img src="" alt="Кот после">
-            <input type="range" min="0" max="60" step="1" value="30">
+            <div class="visualization__img">
+              <img src="" alt="Кот до" width="140" height="232">
+              <img src="" alt="Кот после" width="140" height="232">
+            </div>
+            <div class="scroll__box">
+              <p class="scroll__text">было</p>
+              <input class="visualization__scrolling" type="range" min="0" max="60" step="1" value="30">
+              <p class="scroll__text">стало</p>
+            </div>
           </div>
         </div>
       </section>
       <footer class="page-footer">
+        <div class="footer__inform footer__index">
+          <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
+          <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <img class="map__image" src="" width="320" height="362">
         <div class="footer__wrapper">
-          <div class="footer__inform">
-            <b class="inform__title">приглашаем к сотрудничеству дилеров!</b>
-            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          </div>
-          <img class="map__image" src="">
-          <img class="footer__logo" src="">
+          <img class="footer__logo" src="" width="128" height="24">
           <div class="page-footer__social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="">Мы в Вконтакте</a>
+                <a class="social__link social__link--vkontakte" href=""><img src="" alt="Мы в Вконтакте" width="22" height="13"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href="">Мы в Инстаграме</a>
+                <a class="social__link social__link--instagram" href=""><img src="" alt=" Мы в Инстаграме" width="16" height="16"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="">Мы в Фейсбуке</a>
+                <a class="social__link social__link--facebook" href=""><img src="" alt="Мы в Фейсбуке" width="22" height="22"></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__copyright copyright">
             <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy"></a>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
     </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/js.js"></script>
   </body>
 </html>
