--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
     <header class="page-header">
       <nav class="main-nav">
-        <a class="page-header__logo logo" href=""><img class="logo__img" src="https://via.placeholder.com/150x150" alt="Cat energy">
-        </a>
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
+        <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="Cat energy"></a>
+          <!-- <picture>
+            <source srcset="https://via.placeholder.com/768x768 768w">
+            <source srcset="https://via.placeholder.com/480x480 480w">
+            <img src="https://via.placeholder.com/320x320" alt="logo">
+          </picture> -->
+        <div class="header__burger">
+          <span></span>
+        </div>
+        <div class="header__menu">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a class="site-list__link" href="index.html">
@@ -271,30 +275,29 @@
         <p class="bonus__subtitle">Закажите все и получите чехол для кота в подарок!</p>
       </article>
       <footer class="page-footer">
+        <div class="footer__inform footer__index">
+          <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
+          <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <img class="map__image" src="" width="320" height="362">
         <div class="footer__wrapper">
-          <div class="footer__inform">
-            <b class="inform__title">приглашаем к сотрудничеству дилеров!</b>
-            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          </div>
-          <img class="map__image" src="">
-          <img class="footer__logo" src="">
+          <img class="footer__logo" src="" width="128" height="24">
           <div class="page-footer__social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="">Мы в Вконтакте</a>
+                <a class="social__link social__link--vkontakte" href=""><img src="" alt="Мы в Вконтакте" width="22" height="13"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href="">Мы в Инстаграме</a>
+                <a class="social__link social__link--instagram" href=""><img src="" alt=" Мы в Инстаграме" width="16" height="16"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href="">Мы в Фейсбуке</a>
+                <a class="social__link social__link--facebook" href=""><img src="" alt="Мы в Фейсбуке" width="22" height="22"></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__copyright copyright">
             <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy"></a>
-
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
