--- a/5/index.html
+++ b/5/index.html
@@ -4,26 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+    <link rel="stylesheet" href="css/style.css">
     <base href="https://htmlacademy-adaptive.github.io/1496867-cat-energy-21/5/">
 </head>
   <body class="page-body">
     <header class="page-header">
       <nav class="main-nav">
-        <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="Cat energy"></a>
-          <!-- <picture>
-            <source srcset="https://via.placeholder.com/768x768 768w">
-            <source srcset="https://via.placeholder.com/480x480 480w">
-            <img src="https://via.placeholder.com/320x320" alt="logo">
-          </picture> -->
-        <div class="header__burger">
-          <span></span>
+        <div class="mobiel-header">
+          <a class="page-header__logo logo" href=""><img class="logo__img" src="img/logo-mobile.png" alt="logo energy"></a>
+            <!-- <picture>
+              <source srcset="https://via.placeholder.com/768x768 768w">
+              <source srcset="https://via.placeholder.com/480x480 480w">
+              <img src="https://via.placeholder.com/320x320" alt="logo">
+            </picture> -->
+          <img class="logo-text__img" src="#" alt="Cat energy" width="101" height="18">
+          <div class="header__burger">
+            <span></span>
+          </div>
         </div>
         <div class="header__menu">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__link">
+            <li class="site-list__item">
+              <a class="site-list__link site-list__link--active">
                 Главная
               </a>
             </li>
@@ -38,7 +41,7 @@
               </a>
             </li>
           </ul>
-         </div>
+        </div>
       </nav>
     </header>
     <main>
@@ -79,25 +82,25 @@
           <h3 class="description__title">Как это работает</h3>
           <ul class="description__list">
             <li class="description__item">
-              <div class="description__image--box">
+              <div class="description__box">
                 <img class="description__image" src="" alt="Лист" width="30"  height="32">
               </div>
               <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="description__item">
-              <div class="description__image--box">
+              <div class="description__box">
                 <img class="description__image" src="" alt="Порошок" width="29" height="31">
               </div>
               <p class="description__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="description__item">
-              <div class="description__image--box">
+              <div class="description__box">
                 <img class="description__image" src="" alt="Столовые приборы" width="25" height="30">
               </div>
               <p class="description__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="description__item">
-              <div class="description__image--box">
+              <div class="description__box">
                 <img class="description__image" src="" alt="Часы" width="32" height="33">
               </div>
               <p class="description__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
@@ -115,11 +118,11 @@
             <ul class="total__list">
               <li class="total__item">
                 <h3 class="total__title">5 кг</h3>
-                <p class="total__subtitle">снижение<br>веса</p>
+                <p class="total__subtitle"><span class="subtitle__block">снижение</span><span class="subtitle__block">веса</span></p>
               </li>
               <li class="total__item">
                 <h3 class="total__title">60 дней</h3>
-                <p class="total__subtitle">затрачено<br>времени</p>
+                <p class="total__subtitle"><span class="subtitle__block">затрачено</span><span class="subtitle__block">времени</span></p>
               </li>
             </ul>
             <p class="maney-total">Затраты на питание: 15 000 руб.</p>
@@ -130,19 +133,25 @@
               <img src="" alt="Кот после" width="140" height="232">
             </div>
             <div class="scroll__box">
-              <p class="scroll__text">было</p>
-              <input class="visualization__scrolling" type="range" min="0" max="60" step="1" value="30">
-              <p class="scroll__text">стало</p>
+              <button class="scroll__button">было</button>
+              <div class="slider__wrapper">
+                <div class="slider__body">
+                  <div class="slider__scroll"></div>
+                </div>
+              </div>
+              <button class="scroll__button">стало</button>
             </div>
           </div>
         </div>
       </section>
       <footer class="page-footer">
-        <div class="footer__inform footer__index">
-          <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
-          <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="footer-inform__wrapper">
+          <div class="footer__inform footer__index">
+            <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
+            <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
+          <img class="map__image" src="" width="320" height="362">
         </div>
-        <img class="map__image" src="" width="320" height="362">
         <div class="footer__wrapper">
           <img class="footer__logo" src="" width="128" height="24">
           <div class="page-footer__social">
@@ -165,7 +174,5 @@
         </div>
       </footer>
     </main>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/js.js"></script>
   </body>
 </html>
