--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
               <source srcset="https://via.placeholder.com/480x480 480w">
               <img src="https://via.placeholder.com/320x320" alt="logo">
             </picture> -->
-          <img class="logo-text__img" src="#" alt="Cat energy" width="101" height="18">
+          <img class="logo-text__img" src="https://via.placeholder.com/150x150" alt="Cat energy" width="101" height="18">
           <div class="header__burger">
             <span></span>
           </div>
@@ -53,25 +53,25 @@
               <p class="diet__slogan">Занялся собой? Займись котом!</p>
             </div>
             <div class="container__img">
-              <img class="diet__img visually-hidden" src="" alt="Кошачий корм">
+              <img class="diet__img visually-hidden" src="https://via.placeholder.com/150x150" alt="Кошачий корм">
             </div>
             <a href="" class="button button-diet">подобрать программу</a>
           </header>
           <div class="slimming-diet">
             <div class="diet__inner">
-              <img class="diet__icon icon__slim--indents" src="#" alt="Грациозная кошка" width="32" height="50">
+              <img class="diet__icon diet__icon--indents-slim" src="https://via.placeholder.com/150x150" alt="Грациозная кошка" width="32" height="50">
               <h2 class="diet__caption">Похудение</h2>
             </div>
             <p class="diet__subtitle">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="diet__link" href="">каталог slim<svg class="button__icon" width="32"height="10"></svg></a>
+            <a class="diet__link" href="">каталог slim<svg class="button__icon" width="32" height="10"></svg></a>
           </div>
           <div class="diet-weight-gain">
             <div class="diet__inner">
-              <img class="diet__icon icon__strong--indents" src="" alt="Мощный кот" width="67" height="50">
+              <img class="diet__icon diet__icon--indents-strong" src="https://via.placeholder.com/150x150" alt="Мощный кот" width="67" height="50">
               <h2 class="diet__caption">Набор массы</h2>
             </div>
             <p class="diet__subtitle">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="diet__link" href="">каталог pro<svg class="button__icon" width="32"height="10"></svg></a>
+            <a class="diet__link" href="">каталог pro<svg class="button__icon" width="32" height="10"></svg></a>
           </div>
         </div>
       </section>
@@ -82,25 +82,25 @@
           <ul class="description__list">
             <li class="description__item">
               <div class="description__box">
-                <img class="description__image" src="" alt="Лист" width="30"  height="32">
+                <img class="description__image" src="https://via.placeholder.com/150x150" alt="Лист" width="30" height="32">
               </div>
               <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="description__item">
               <div class="description__box">
-                <img class="description__image" src="" alt="Порошок" width="29" height="31">
+                <img class="description__image" src="https://via.placeholder.com/150x150" alt="Порошок" width="29" height="31">
               </div>
               <p class="description__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="description__item">
               <div class="description__box">
-                <img class="description__image" src="" alt="Столовые приборы" width="25" height="30">
+                <img class="description__image" src="https://via.placeholder.com/150x150" alt="Столовые приборы" width="25" height="30">
               </div>
               <p class="description__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="description__item">
               <div class="description__box">
-                <img class="description__image" src="" alt="Часы" width="32" height="33">
+                <img class="description__image" src="https://via.placeholder.com/150x150" alt="Часы" width="32" height="33">
               </div>
               <p class="description__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
@@ -128,8 +128,8 @@
           </div>
           <div class="visualization">
             <div class="visualization__img">
-              <img src="" alt="Кот до" width="140" height="232">
-              <img src="" alt="Кот после" width="140" height="232">
+              <img src="https://via.placeholder.com/150x150" alt="Кот до" width="140" height="232">
+              <img src="https://via.placeholder.com/150x150" alt="Кот после" width="140" height="232">
             </div>
             <div class="scroll__box">
               <button class="scroll__button">было</button>
@@ -149,26 +149,26 @@
             <b class="inform__title">Приглашаем к сотрудничеству дилеров!</b>
             <p class="inform__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
-          <img class="map__image" src="" width="320" height="362">
+          <img class="map__image" src="https://via.placeholder.com/150x150" alt="map" width="320" height="362">
         </div>
         <div class="footer__wrapper">
-          <img class="footer__logo" src="" width="128" height="24">
+          <img class="footer__logo" src="https://via.placeholder.com/150x150https://via.placeholder.com/150x150" alt="location" width="128" height="24">
           <div class="page-footer__social">
             <ul class="social__list">
               <li class="social__item">
-                <a class="social__link social__link--vkontakte" href=""><img src="" alt="Мы в Вконтакте" width="22" height="13"></a>
+                <a class="social__link social__link--vkontakte" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Вконтакте" width="22" height="13"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--instagram" href=""><img src="" alt=" Мы в Инстаграме" width="16" height="16"></a>
+                <a class="social__link social__link--instagram" href=""><img src="https://via.placeholder.com/150x150" alt=" Мы в Инстаграме" width="16" height="16"></a>
               </li>
               <li class="social__item">
-                <a class="social__link social__link--facebook" href=""><img src="" alt="Мы в Фейсбуке" width="22" height="22"></a>
+                <a class="social__link social__link--facebook" href=""><img src="https://via.placeholder.com/150x150" alt="Мы в Фейсбуке" width="22" height="22"></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__copyright copyright">
             <b>HTML Academy</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="" alt="HTML Academy" width="27" height="34"></a>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><img src="https://via.placeholder.com/150x150" alt="HTML Academy" width="27" height="34"></a>
           </div>
         </div>
       </footer>
